--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 Style Sheet for eBooks@Adelaide web books
 Authors: Steve Thomas <stephen.thomas@adelaide.edu.au>
          Raymond Li <blake@raymond.li>
-Version: 2019.9.28
+Version: 2019.9.30
 Rights: Public Domain
 */
 body {
@@ -10,7 +10,7 @@ body {
 	color: #000;
 	font-family: Georgia, serif;
 	margin: auto;
-	max-width: 60em;
+	max-width: 70vw;
 }
 
 p {
@@ -30,7 +30,7 @@ span.first {
 }
 
 div {
-	margin-bottom: 1em;
+	margin: 1em;
 	position: relative;
 }
 
@@ -89,25 +89,18 @@ a:active, a:hover {
 .column {
 	float: left;
 	width: 50%;
+	display: inline-block;
+	text-align: left;
 }
 
 .row {
-	/* Internet Explorer 10 */
-	display: -ms-flexbox;
-	-ms-flex-pack: center;
-	-ms-flex-align: center;
-	/* Firefox */
-	display: -moz-box;
-	-moz-box-pack: center;
-	-moz-box-align: center;
-	/* Safari, Opera, and Chrome */
-	display: -webkit-box;
-	-webkit-box-pack: center;
-	-webkit-box-align: center;
-	/* W3C */
-	display: box;
-	box-pack: center;
-	box-align: center;
+     display: flex;
+     align-items: center;
+     justify-content: center;;
+}
+
+#tocrow {
+	align-items: baseline;
 }
 
 /* Clear floats after the columns */
@@ -400,48 +393,50 @@ pre, .pre {
 }
 
 /* Title page */
-#titlepage {
-	border: 2px solid #00609c;
-	height: 16em;
+#titlebox {
+	border: 0.5em solid #e91e6c;
+	height: auto;
+	margin: 2em;
+	margin-bottom: 1em;
 	position: relative;
 }
 
-#titlepage h1,
-#titlepage h2,
-#titlepage h3,
-#titlepage h4,
-#titlepage h5,
-#titlepage h6,
-#titlepage p {
+#titlebox h1,
+#titlebox h2,
+#titlebox h3,
+#titlebox h4,
+#titlebox h5,
+#titlebox h6,
+#titlebox p {
 	font-weight: normal;
 }
 
-#titlepage h1,
-#titlepage h2 {
+#titlebox h1,
+#titlebox h2 {
 	line-height: 180%;
 }
 
-.titlepage {
+.titlebox {
 	font-weight: bold;
 	padding: 1em;
 	text-align: center !important;
 }
 
-.titlepage h1,
-.titlepage h2,
-.titlepage h3,
-.titlepage h4,
-.titlepage p {
+.titlebox h1,
+.titlebox h2,
+.titlebox h3,
+.titlebox h4,
+.titlebox p {
 	margin-top: 0;
 	margin-bottom: 1em;
 }
 
-.titlepage h3,
-.titlepage h4 {
+.titlebox h3,
+.titlebox h4 {
 	font-variant: normal;
 }
 
-.titlepage p {
+.titlebox p {
 	text-align: center;
 	text-indent: 0;
 }
